# ModernDMALibrary

./: .clang-tidy-ignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  clang-tidy-config  compile_commands.json  gtest.cpp  main.cc
.github/: actionlint.yaml
.github/workflows/: build.yaml  cmake.yml  codacy.yaml  codacy.yml  report_analysis.yaml
MordenDMALibrary/: CMakeLists.txt  MDMALConfig.cmake.in
MordenDMALibrary/include/: device.h  device_manager.h  devicehandler.h  dmaio.h  handle_wrapper.tcc  io.h  io_proc.h  io_proc.tcc  leech_wrapper.h  leech_wrapper.tcc  leechwrapper.h  memory.h
MordenDMALibrary/src/: CMakeLists.txt  device.cc  device_manager.cc  devicehandler.cc  dmaio.cc  io.cc  io_proc.cc  leech_wrapper.cc  leechwrapper.cc  memory.cc
cmake/: CMakeLists.txt  InitGitSubmodules.cmake  LeechCore.cmake  MemProcFS.cmake
examples/: CMakeLists.txt  main.cc
include/: device.h  memory.h
src/: device.cc  memory.cc
submodules/: CMakeLists.txt
unittest/: CMakeLists.txt  dmatest.cc
